@startuml

title __COMPANY's Class Diagram__\n

  package com.company {
    class Agent {
        - name : String
        - available : boolean
        - time : int
        + Agent()
        + get()
        + getName()
        + setName()
        + isAvailable()
        + setAvailable()
        + getClient()
        + setClient()
        - attend()
    }
  }
  

  package com.company {
    class Cashier {
        + Cashier()
    }
  }
  

  package com.company {
    class Client {
        - name : String
        + Client()
        + performOperation()
        + getName()
    }
  }
  

  package com.company {
    class Director {
        + Director()
    }
  }
  

  package com.company {
    class Dispatcher {
        - agents : List<Agent>
        ~ dispatcher : ExecutorService
        ~ numberAgents : int
        + Dispatcher()
        + attend()
        + putOnWait()
        + finishAssignerJob()
        - obtainAgentAvailable()
        - createAgents()
    }
  }
  

  package com.company {
    class Main {
        {static} - clients : List<Client>
        {static} + main()
        {static} + createClients()
    }
  }
  

  package com.company {
    class Supervisor {
        + Supervisor()
    }
  }
  

  Agent -up-|> Supplier
  Agent o-- Client : client
  Cashier -up-|> Agent
  Director -up-|> Agent
  Supervisor -up-|> Agent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
